adds content to about-page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,39 @@
   <h1>Elijah Andrews Portfolio</h1>
   <section id="nav-bar">
     <!-- create nav bar here -->
-  </section>
+  </section> 
+  <div>
   <section id="preview-sidebar">
-    <div class="previews" id="about-prev">About</div>
-    <div class="previews" id="work-prev">Work</div>
-    <div class="previews" id="contact-prev">Contact</div>
-    <div class="previews" id="resume-prev">Resume</div>
+    <div class="previews" id="about-prev">
+      <a href="./html/about-page.html">
+        <div>
+          about
+        </div>
+      </a>
+    </div>
+    <div class="previews" id="work-prev">
+      <a href="./html/work-page.html">
+        <div>
+          work
+        </div>
+      </a>
+    </div>
+    <div class="previews" id="contact-prev">
+      <a href="./html/contact-page.html">
+        <div>
+          contact
+        </div>
+      </a>
+    </div>
+    <div class="previews" id="resume-prev">
+      <a href="./html/resume-page.html">
+        <div>
+          resume
+        </div>
+      </a>
+    </div>
   </section>
-  <!-- insert image here -->
+  <img src="https://i.imgur.com/vWozJlv.jpg" alt="">
+  </div>
 </body>
 </html>
