--- a/html/about-page.html
+++ b/html/about-page.html
@@ -8,7 +8,15 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body>
-  
+<body id="about-body">
+  <div id="about-top">
+    <h1 id="about-header">About Me</h1>
+    <img id="profile-pic" src="/Images/ElijahAndrews(1).jpg" alt="">
+  </div>
+  <div id="about-bottom">
+    <p class="about-bio">
+      I am Elijah Andrews. I am currently attending General Assembly's Software-Engineering program. I have worked with HTML, Javascript and CSS. Prior to my time at GA, I worked as a Shift-lead Manager at Starbucks for about a year. 
+    <p class="about-bio">From August 2021, until February of 2022, I lived in the country of Albania, where I did volunteer work. I helped to provide continued disaster relief from a major earthquake that hit the country in 2019, as well as worked in a food program that provided basic necessities for people in need. </p>
+  </div>
 </body>
 </html>
