--- a/index.html
+++ b/index.html
@@ -8,43 +8,33 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body>
-  <h1>Elijah Andrews Portfolio</h1>
+<body id="home-body">
+  <h1 id="home-header">Elijah Andrews Portfolio</h1>
   <section id="nav-bar">
     <!-- create nav bar here -->
   </section> 
-  <div>
   <section id="preview-sidebar">
     <div class="previews" id="about-prev">
       <a href="./html/about-page.html">
-        <div>
-          about
-        </div>
+          <img class="icon" id="about-icon" src="/Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
       </a>
     </div>
     <div class="previews" id="work-prev">
       <a href="./html/work-page.html">
-        <div>
-          work
-        </div>
+          <img class="icon" id="work-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
       </a>
     </div>
     <div class="previews" id="contact-prev">
       <a href="./html/contact-page.html">
-        <div>
-          contact
-        </div>
+          <img class="icon" id="contact-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
       </a>
     </div>
     <div class="previews" id="resume-prev">
       <a href="./html/resume-page.html">
-        <div>
-          resume
-        </div>
+          <img class="icon" id="resume-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
       </a>
     </div>
   </section>
-  <img src="https://i.imgur.com/vWozJlv.jpg" alt="">
-  </div>
+  
 </body>
 </html>
