begins setup for work page

--- a/html/work-page.html
+++ b/html/work-page.html
@@ -8,7 +8,14 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body>
-  Work
+<body id="work-body">
+<div id="work-top">
+  <h1 id="work-header">My Works</h1>
+</div>
+<section id="work-bottom">
+  <div>
+
+  </div>
+</section>
 </body>
 </html>
