finishes work page setup

--- a/html/work-page.html
+++ b/html/work-page.html
@@ -13,8 +13,11 @@
   <h1 id="work-header">My Works</h1>
 </div>
 <section id="work-bottom">
-  <div>
-
+  <div class="works">
+    <p>Tic-Tac-Toe Browser Game:</p>
+    <a href="https://tic-tac-toe-elijahsmiael.netlify.app/">
+      <img id="tictactoe-prev" src="../Images/TicTacToe.png" alt="">
+    </a>
   </div>
 </section>
 </body>
