completes work page and creates contact page

--- a/html/contact-page.html
+++ b/html/contact-page.html
@@ -4,11 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body>
-  Contact
+<body id="contact-body">
+  <h1 class="home-header">Elijah Andrews Portfolio</h1>
+<div id="contact-top">
+  <h1 id="contact-header">Contact Me</h1>
+</div>
+<section id="contact-bottom">
+  <div class="contacts">
+    <a href="https://www.linkedin.com/in/elijah-andrews-503881238/">
+      <img class="contacts-prev" src="../Images/LinkedInLogo.png" alt="">
+    </a>
+  </div>
+  <div class="contacts">
+    <a href="https://github.com/ElijahSMIAEL">
+      <img class="contacts-prev" src="../Images/GitHub-Mark.png" alt="">
+    </a>
+  </div>
+</section>
 </body>
 </html>
