--- a/html/about-page.html
+++ b/html/about-page.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
 <body id="about-body">
+  <h1 class="home-header">Elijah Andrews Portfolio</h1>
   <div id="about-top">
     <h1 id="about-header">About Me</h1>
     <img id="profile-pic" src="/Images/ElijahAndrews(1).jpg" alt="">
