--- a/html/work-page.html
+++ b/html/work-page.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
 <body id="work-body">
+<h1 class="home-header">Elijah Andrews Portfolio</h1>
 <div id="work-top">
   <h1 id="work-header">My Works</h1>
 </div>
@@ -16,7 +20,7 @@
   <div class="works">
     <p>Tic-Tac-Toe Browser Game:</p>
     <a href="https://tic-tac-toe-elijahsmiael.netlify.app/">
-      <img id="tictactoe-prev" src="../Images/TicTacToe.png" alt="">
+      <img class="work-prev" src="../Images/TicTacToe.png" alt="">
     </a>
   </div>
 </section>
