--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
 <body id="home-body">
-  <h1 id="home-header">Elijah Andrews Portfolio</h1>
+  <h1 class="home-header">Elijah Andrews Portfolio</h1>
   <section id="nav-bar">
     <!-- create nav bar here -->
   </section> 
   <section id="preview-sidebar">
     <div class="previews" id="about-prev">
       <a href="./html/about-page.html">
-          <img class="icon" id="about-icon" src="/Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
+          <img class="icon" id="about-icon" src="./Images/AboutPrev.png" alt="">
       </a>
     </div>
     <div class="previews" id="work-prev">
       <a href="./html/work-page.html">
-          <img class="icon" id="work-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
+          <img class="icon" id="work-icon" src="./Images/WorkPrev.png" alt="">
       </a>
     </div>
     <div class="previews" id="contact-prev">
       <a href="./html/contact-page.html">
-          <img class="icon" id="contact-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
+          <img class="icon" id="contact-icon" src="./Images/ContactPrev.png" alt="">
       </a>
     </div>
     <div class="previews" id="resume-prev">
@@ -35,6 +38,5 @@
       </a>
     </div>
   </section>
-  <img id="home-img" src="./Images/AboutIMG.jpeg" alt="">
 </body>
 </html>
