--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -8,7 +8,17 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body>
-  Resume
-</body>
+<body id="resume-body">
+  <h1 class="home-header">Elijah Andrews Portfolio</h1>
+  <div id="resume-top">
+    <h1 id="resume-header">My Resume</h1>
+  </div>
+  <section id="resume-bottom">
+    <div class="resumes">
+      <a href="https://docs.google.com/document/d/1-3qODSkLsyl9oAKBYyh7Y7TOYqG-hB2fnK68CVzkDjI/edit">
+        <img class="work-prev" src="../Images/ResumeIcon.png" alt="">
+      </a>
+    </div>
+  </section>
+  </body>
 </html>
