--- a/index.html
+++ b/index.html
@@ -13,28 +13,26 @@
 </head>
 <body id="home-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
-  <section id="nav-bar">
-    <!-- create nav bar here -->
-  </section> 
+  <div class="dark-light-button">Dark</div>
   <section id="preview-sidebar">
     <div class="previews" id="about-prev">
       <a href="./html/about-page.html">
-          <img class="icon" id="about-icon" src="./Images/AboutPrev.png" alt="">
+          <img class="icon" id="about-icon" src="./Images/AboutPreview.png" alt="">
       </a>
     </div>
     <div class="previews" id="work-prev">
       <a href="./html/work-page.html">
-          <img class="icon" id="work-icon" src="./Images/WorkPrev.png" alt="">
+          <img class="icon" id="work-icon" src="./Images/WorkPreview.png" alt="">
       </a>
     </div>
     <div class="previews" id="contact-prev">
       <a href="./html/contact-page.html">
-          <img class="icon" id="contact-icon" src="./Images/ContactPrev.png" alt="">
+          <img class="icon" id="contact-icon" src="./Images/ContactPreview.png" alt="">
       </a>
     </div>
     <div class="previews" id="resume-prev">
       <a href="./html/resume-page.html">
-          <img class="icon" id="resume-icon" src="./Images/Screenshot from 2022-06-06 15-26-16.png" alt="">
+          <img class="icon" id="resume-icon" src="./Images/ResumePreview.png" alt="">
       </a>
     </div>
   </section>
