Begins dark mode functionality

--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -13,7 +13,7 @@
 </head>
 <body id="resume-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
-  <a href="http://127.0.0.1:5500/">
+  <a href="/index.html">
     <div class="home-button">Home</div>
   </a>
   <div id="resume-top">
