--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body id="home-body">
+<body class="home-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
-  <div class="dark-light-button">Dark</div>
-  <section id="preview-sidebar">
+  <div class="dark-light-button">Dark-Mode</div>
+  <section class="preview-sidebar">
     <div class="previews" id="about-prev">
       <a href="./html/about-page.html">
           <img class="icon" id="about-icon" src="./Images/AboutPreview.png" alt="">
