Implements local-storage to track dark mode

--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -13,13 +13,16 @@
 </head>
 <body id="resume-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
+  <section class="nav-buttons">
+  <div class="dark-light-button">Dark-Mode</div>
   <a href="/index.html">
     <div class="home-button">Home</div>
   </a>
-  <div id="resume-top">
-    <h1 id="resume-header">My Resume</h1>
+  </section>
+  <div class="secondary-top">
+    <h1 class="secondary-header">My Resume</h1>
   </div>
-  <section id="resume-bottom">
+  <section class="secondary-bottom">
     <div class="resumes">
       <a href="https://docs.google.com/document/d/1-3qODSkLsyl9oAKBYyh7Y7TOYqG-hB2fnK68CVzkDjI/edit">
         <img class="work-prev" src="../Images/ResumeIcon.png" alt="">
