--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
   <div class="dark-light-button">Dark-Mode</div>
   <section class="preview-sidebar">
-    <div class="previews" id="about-prev">
+    <div class="previews">
       <a href="./html/about-page.html">
-          <img class="icon" id="about-icon" src="./Images/AboutPreview.png" alt="">
+          <img class="icon" src="./Images/AboutPreview.png" alt="">
       </a>
     </div>
-    <div class="previews" id="work-prev">
+    <div class="previews">
       <a href="./html/work-page.html">
           <img class="icon" id="work-icon" src="./Images/WorkPreview.png" alt="">
       </a>
     </div>
-    <div class="previews" id="contact-prev">
+    <div class="previews">
       <a href="./html/contact-page.html">
-          <img class="icon" id="contact-icon" src="./Images/ContactPreview.png" alt="">
+          <img class="icon"  src="./Images/ContactPreview.png" alt="">
       </a>
     </div>
-    <div class="previews" id="resume-prev">
+    <div class="previews">
       <a href="./html/resume-page.html">
-          <img class="icon" id="resume-icon" src="./Images/ResumePreview.png" alt="">
+          <img class="icon" src="./Images/ResumePreview.png" alt="">
       </a>
     </div>
   </section>
