--- a/html/about-page.html
+++ b/html/about-page.html
@@ -11,16 +11,23 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body id="about-body">
-  <h1 class="home-header">Elijah Andrews Portfolio</h1>
-  <div id="about-top">
-    <h1 id="about-header">About Me</h1>
-    <img id="profile-pic" src="/Images/ElijahAndrews(1).jpg" alt="">
+<body id="work-body">
+<h1 class="home-header">Elijah Andrews Portfolio</h1>
+<section class="nav-buttons">
+  <div class="dark-light-button">Dark-Mode</div>
+  <a href="/index.html">
+    <div class="home-button">Home</div>
+  </a>
+  </section>
+<div class="secondary-top">
+  <img id="profile-pic" src="/Images/ElijahAndrews(1).jpg" alt="">
+  <h1 class="secondary-header" id="about-header">About Me</h1>
+</div>
+<section class="secondary-bottom">
+  <p class="about-bio">
+    I am Elijah Andrews. I am currently attending General Assembly's Software-Engineering program. I have worked with HTML, Javascript and CSS. Prior to my time at GA, I worked as a Shift-lead Manager at Starbucks for about a year.
+  <p class="about-bio">From August 2021, until February of 2022, I lived in the country of Albania, where I did volunteer work. I helped to provide continued disaster relief from a major earthquake that hit the country in 2019, as well as worked in a food program that provided basic necessities for people in need. </p>
   </div>
-  <div id="about-bottom">
-    <p class="about-bio">
-      I am Elijah Andrews. I am currently attending General Assembly's Software-Engineering program. I have worked with HTML, Javascript and CSS. Prior to my time at GA, I worked as a Shift-lead Manager at Starbucks for about a year. 
-    <p class="about-bio">From August 2021, until February of 2022, I lived in the country of Albania, where I did volunteer work. I helped to provide continued disaster relief from a major earthquake that hit the country in 2019, as well as worked in a food program that provided basic necessities for people in need. </p>
-  </div>
+</section>
 </body>
 </html>
