--- a/html/contact-page.html
+++ b/html/contact-page.html
@@ -13,10 +13,16 @@
 </head>
 <body id="contact-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
-<div id="contact-top">
-  <h1 id="contact-header">Contact Me</h1>
+  <section class="nav-buttons">
+    <div class="dark-light-button">Dark-Mode</div>
+    <a href="/index.html">
+      <div class="home-button">Home</div>
+    </a>
+    </section>
+<div class="secondary-top">
+  <h1 class="secondary-header">Contact Me</h1>
 </div>
-<section id="contact-bottom">
+<section class="secondary-bottom">
   <div class="contacts">
     <a href="https://www.linkedin.com/in/elijah-andrews-503881238/">
       <img class="contacts-prev" src="../Images/LinkedInLogo.png" alt="">
