--- a/html/work-page.html
+++ b/html/work-page.html
@@ -13,10 +13,16 @@
 </head>
 <body id="work-body">
 <h1 class="home-header">Elijah Andrews Portfolio</h1>
-<div id="work-top">
-  <h1 id="work-header">My Works</h1>
+<section class="nav-buttons">
+  <div class="dark-light-button">Dark-Mode</div>
+  <a href="/index.html">
+    <div class="home-button">Home</div>
+  </a>
+  </section>
+<div class="secondary-top">
+  <h1 class="secondary-header">My Works</h1>
 </div>
-<section id="work-bottom">
+<section class="secondary-bottom">
   <div class="works">
     <p>Tic-Tac-Toe Browser Game:</p>
     <a href="https://tic-tac-toe-elijahsmiael.netlify.app/">
