--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -11,7 +11,7 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body id="resume-body">
+<body class="home-body" id="resume-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
   <section class="nav-buttons">
   <div class="dark-light-button">Dark-Mode</div>
