--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script defer src="../js/app.js"></script>
   <title>Document</title>
 </head>
-<body class="home-body">
+<body id="home-body" class="home-body">
   <h1 class="home-header">Elijah Andrews Portfolio</h1>
   <div class="dark-light-button">Dark-Mode</div>
   <section class="preview-sidebar">
