--- a/html/work-page.html
+++ b/html/work-page.html
@@ -4,12 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
-  <title>Document</title>
+  <title>Elijah-Andrews-works</title>
 </head>
 <body class="home-body" id="work-body">
 <h1 class="home-header">Elijah Andrews Portfolio</h1>
@@ -23,7 +32,7 @@
   <h1 class="secondary-header">My Works</h1>
 </div>
 <section class="secondary-bottom">
-  <div class="works">
+  <div class="file-display">
     <p>Tic-Tac-Toe Browser Game:</p>
     <a href="https://tic-tac-toe-elijahsmiael.netlify.app/">
       <img class="work-prev" src="../Images/TicTacToe.png" alt="">
