adds final media touches and finishes readme

--- a/html/about-page.html
+++ b/html/about-page.html
@@ -35,10 +35,10 @@
     <p class="hidden-message" hidden>Hello!</p>
   </div>
 </div>
-<section class="secondary-bottom">
-  <p class="about-bio">
+<section id="about-bottom">
+  <p class="about-bio" hidden>
     I am Elijah Andrews. I am currently attending General Assembly's Software-Engineering program. I have worked with HTML, Javascript and CSS. Prior to my time at GA, I worked as a Shift-lead Manager at Starbucks for about a year.
-  <p class="about-bio">From August 2021, until February of 2022, I lived in the country of Albania, where I did volunteer work. I helped to provide continued disaster relief from a major earthquake that hit the country in 2019, as well as worked in a food program that provided basic necessities for people in need. </p>
+  <p class="about-bio" hidden>From August 2021, until February of 2022, I lived in the country of Albania, where I did volunteer work. I helped to provide continued disaster relief from a major earthquake that hit the country in 2019, as well as worked in a food program that provided basic necessities for people in need. </p>
   </div>
 </section>
 </body>
