--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -33,7 +33,7 @@
   </div>
   <section class="secondary-bottom">
     <div class="file-display">
-      <a href="https://docs.google.com/document/d/1-3qODSkLsyl9oAKBYyh7Y7TOYqG-hB2fnK68CVzkDjI/edit">
+      <a href="../Images/My Resume.pdf">
         <img class="work-prev" src="../Images/ResumeIcon.png" alt="">
       </a>
     </div>
