add works.js page and works-render.js page for proper work data

--- a/html/work-page.html
+++ b/html/work-page.html
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Nuosu+SIL&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/app.js"></script>
+  <script defer src="../js/works-render.js" type="module"></script>
   <title>Elijah-Andrews-works</title>
 </head>
 <body class="home-body" id="work-body">
@@ -32,12 +33,6 @@
   <h1 class="secondary-header">My Works</h1>
 </div>
 <section class="secondary-bottom">
-  <div class="file-display">
-    <p>Tic-Tac-Toe Browser Game:</p>
-    <a href="https://tic-tac-toe-elijahsmiael.netlify.app/">
-      <img class="work-prev" src="../Images/TicTacToe.png" alt="">
-    </a>
-  </div>
 </section>
 </body>
 </html>
