add real resume

--- a/html/resume-page.html
+++ b/html/resume-page.html
@@ -33,8 +33,8 @@
   </div>
   <section class="secondary-bottom">
     <div class="file-display">
-      <a href="../Images/My Resume.pdf">
-        <img class="work-prev" src="../Images/ResumeIcon.png" alt="">
+      <a href="/Images/MyResume.png">
+        <img class="work-prev" src="/Images/MyResume.png" alt="">
       </a>
     </div>
   </section>
